--- a/templates/login.html
+++ b/templates/login.html
@@ -74,7 +74,7 @@
                 <div class="login-card">
                     <div class="login-header">
                         <h3 class="mb-0">Login Admin</h3>
-                        <p class="mb-0 mt-2">Sistem Monitoring Pelanggaran Helm</p>
+                        <p class="mb-0 mt-2">Sistem Laporan Pelanggaran Helm</p>
                     </div>
                     <div class="login-body">
                         <!-- Flash Messages -->
