--- a/templates/daily_report.html
+++ b/templates/daily_report.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laporan Harian - Sistem Monitoring Pelanggaran Helm</title>
+    <title>Laporan Harian - Sistem Laporan Pelanggaran Helm</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -28,7 +28,7 @@
             <div class="d-flex align-items-center justify-content-between">
                 <h1 class="fw-bold fs-2">Laporan  Pelanggaran</h1>
                 <div>
-                    <a href="/beranda" class="btn btn-primary">
+                    <a href="/" class="btn btn-primary">
                         Kembali ke Beranda
                     </a>
                 </div>
