--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistem Monitoring Pelanggaran Helm</title>
+    <title>Sistem Laporan Pelanggaran Helm</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <style>
@@ -51,7 +51,7 @@
 
         <header class="pb-3 mb-4 border-bottom">
             <div class="d-flex align-items-center justify-content-between">
-                <h1 class="fw-bold fs-2">Sistem Monitoring Pelanggaran Helm</h1>
+                <h1 class="fw-bold fs-2">Sistem Laporan Pelanggaran Helm</h1>
                 <div>
                     <i class="bi bi-person-circle"></i>
                         Selamat datang, {{ session.username }}!
